manifest/base/bhasai/deployer/deployment-deployer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:

  labels:
    app.kubernetes.io/name: deployer
  name: deployer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: deployer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: deployer
    spec:
      containers:
        - envFrom:
          - secretRef:
              name: deployer
          image: ghcr.io/bharatsahaiyak/deployer:dev
          name: deployer
          resources:
            limits:
              memory: "1073741824"
      restartPolicy: Always
