manifest/base/bhasai/deployer/service-deployer.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployer
spec:
  selector:
    app.kubernetes.io/name: deployer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
