manifest/base/bhasai/deployer/ingress-dataset-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deployer
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - host: "deployer.k8s.bhasai.samagra.io"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: deployer
            port:
              number: 80
---
